#TEC-527 To prevent that the navigation will be overlapped by some ads

--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@
 .navigation {
   font-size: 1rem;
   font-family: var(--fontfamily-body);
+  z-index: 10000000;
 }
 
 .navigation a.navigation__main-navigation-link,
